objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Emp_Location__c</fullName>
        <label>Emp Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Name__c</fullName>
        <label>Emp Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_No__c</fullName>
        <displayFormat>E-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Emp No</label>
        <type>AutoNumber</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>